--- a/css/main.css
+++ b/css/main.css
@@ -1322,6 +1322,7 @@ footer .last-block a {
 
 #more-about-us {
   padding: 128px 0;
+  overflow-x: hidden;
 }
 
 #more-about-us p {
@@ -1332,17 +1333,14 @@ footer .last-block a {
   font-style: normal;
   font-weight: 500;
   line-height: 150%;
+  width: 581px;
 }
 
 #more-about-us .more-about-us-block {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   gap: 64px;
-}
-
-#more-about-us .more-about-us-block-2 {
-  gap: 100px;
 }
 
 #more-about-us .avatar {
@@ -1361,6 +1359,8 @@ footer .last-block a {
 
 #more-about-us .more-about-us-block .imgs img {
   position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 #more-about-us .more-about-us-block .imgs .two {
@@ -1371,6 +1371,27 @@ footer .last-block a {
 #more-about-us .more-about-us-block .imgs .three {
   left: -40px;
   top: 40px;
+}
+
+#more-about-us .imgs {
+  transition: opacity 0.5s ease-in-out;
+}
+
+#more-about-us .imgs.show {
+  opacity: 1;
+}
+
+#more-about-us .imgs img {
+  transition: transform 0.5s ease-in-out;
+  transform: translateX(200%);
+  -webkit-transform: translateX(200%);
+  -moz-transform: translateX(200%);
+  -ms-transform: translateX(200%);
+  -o-transform: translateX(200%);
+}
+
+#more-about-us .imgs img.show {
+  transform: translateX(0);
 }
 
 .more-about-us {
@@ -3343,6 +3364,7 @@ footer .last-block a {
 
   #more-about-us .more-about-us-block-2 {
     flex-direction: column-reverse;
+    gap: 0;
   }
 
   #more-about-us .more-about-us-block p {
@@ -4539,3 +4561,25 @@ form .submit:hover {
     bottom: -48px !important;
   }
 }
+
+
+/* #more-about-us .more-about-us-block .imgs img {
+  position: absolute;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+#more-about-us .more-about-us-block .imgs .one {
+  right: -20px;
+  top: 0;
+}
+
+#more-about-us .more-about-us-block .imgs .two {
+  top: -20px;
+  right: -40px;
+}
+
+#more-about-us .more-about-us-block .imgs .three {
+  top: -40px;
+  right: -60px;
+} */
