--- a/css/main.css
+++ b/css/main.css
@@ -1118,7 +1118,7 @@ nav a.active {
   align-items: center;
   gap: 8px;
   border-radius: 5px;
-  border: 0.2px solid #979797;
+  border: 0.2px solid #333;
   background: #FFF;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -2278,6 +2278,7 @@ footer .last-block a {
 
 #our-services .service-block.another-2 {
   padding: 10px 20px;
+  background: #347BD9 !important;
 }
 
 #our-services .last-service-block {
@@ -2578,7 +2579,7 @@ footer .last-block a {
   display: flex;
   width: 440px;
   height: 320px;
-  padding: 16px 24px;
+  padding: 16px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -2856,7 +2857,7 @@ footer .last-block a {
 
 #our-design .our-design-block {
   display: flex;
-  padding: 48px 24px;
+  padding: 0px 24px;
   flex-direction: column;
   gap: 24px;
 }
@@ -3214,7 +3215,7 @@ footer .last-block a {
   color: #1B4071;
   text-align: center;
   font-family: Tajawal;
-  font-size: 24px;
+  font-size: 21px;
   font-style: normal;
   font-weight: 700;
   line-height: 150%;
@@ -4630,5 +4631,23 @@ form .submit:hover {
   #testimonial-2 .swiper-pagination-custom,
   #testimonial-2 .swiper-pagination-fraction {
     bottom: -48px !important;
+  }
+}
+
+.wahed-class p {
+  width: 732px !important;
+}
+
+.wahed-class img {
+  width: 550px !important;
+}
+
+@media (max-width: 991px) {
+  .wahed-class p {
+    width: 100% !important;
+  }
+
+  .wahed-class img {
+    width: 100% !important;
   }
 }
