--- a/css/main.css
+++ b/css/main.css
@@ -1226,7 +1226,7 @@ nav a.active {
 #last-blog .bottom p {
   color: #FFF;
   font-family: Tajawal;
-  font-size: 14px;
+  font-size: 13px;
   font-style: normal;
   font-weight: 400;
   line-height: 157.4%;
@@ -3215,7 +3215,8 @@ footer ul li .speciel {
 
 .card-slider {
   display: flex;
-  height: 410px;
+  width: 480px;
+  height: 360px;
   padding: 16px;
   flex-direction: column;
   justify-content: center;
@@ -3252,7 +3253,7 @@ footer ul li .speciel {
   color: #1B4071;
   text-align: center;
   font-family: Tajawal;
-  font-size: 16px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 500;
   line-height: 200%;
