--- a/css/main.css
+++ b/css/main.css
@@ -3598,6 +3598,10 @@ footer ul li .speciel {
     top: 50px;
   }
 
+  #planning .imgs-container {
+    width: 500px !important;
+  }
+
   #testimonial .info {
     height: 100%
   }
@@ -3641,6 +3645,10 @@ footer ul li .speciel {
 
   #planning a {
     margin: 0 auto;
+  }
+
+  #planning .imgs-container {
+    width: 300px !important;
   }
 
   .slide .desc {
