--- a/css/main.css
+++ b/css/main.css
@@ -131,6 +131,7 @@ nav ul li a:hover svg path {
   -ms-border-radius: 0 0 10px 10px;
   -o-border-radius: 0 0 10px 10px;
   margin-top: 5px;
+  gap: 0 5px;
 }
 
 .navbar-expand-lg .navbar-nav .dropdown-menu.show li a.new-active {
@@ -542,6 +543,19 @@ nav a.active {
   padding: 80px 0;
 }
 
+#services .main-services-block {
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+  gap: 48px;
+  justify-content: center;
+}
+
+#services .main-services-block .child-services-block {
+  width: 400px;
+  height: 420px;
+  /* margin: auto; */
+}
+
 #services .header-content {
   margin-bottom: 48px;
 }
@@ -619,7 +633,7 @@ nav a.active {
   color: #333;
   text-align: center;
   font-family: Tajawal;
-  font-size: 21px;
+  font-size: 24px;
   font-style: normal;
   font-weight: 800;
   line-height: 150%;
@@ -644,7 +658,7 @@ nav a.active {
 
 #services .service-block:hover {
   background: linear-gradient(89deg, #1B4071 11.59%, #78A5DF 139.53%);
-  box-shadow: 8px 8px 40px 5px rgba(0, 0, 0, 0.50);
+  box-shadow: 3px 1px 40px 4px rgba(0, 0, 0, 0.40);
 }
 
 #services .service-block:hover h4,
