--- a/css/main.css
+++ b/css/main.css
@@ -239,9 +239,15 @@ nav ul li a:hover svg path {
   margin-right: 8px;
 }
 
-.social-media-icons i {
+.social-media-icons svg {
   font-size: 23px;
-  color: #fff;
+  fill: #fff;
+}
+
+@media (min-width: 768px) {
+  .dark-whatsapp {
+    fill: #000;
+  }
 }
 
 .social-media-icons img {
@@ -543,17 +549,28 @@ nav a.active {
   padding: 80px 0;
 }
 
+@media (min-width: 1360px) {
+  #services .new-container {
+    width: 1320px;
+    margin: auto;
+  }
+}
+
 #services .main-services-block {
-  display: grid;
-  grid-template-columns: repeat(3, 400px);
+  display: flex;
+  flex-wrap: wrap;
   gap: 48px;
-  justify-content: center;
+}
+
+@media (max-width: 1300px) {
+  #services .main-services-block {
+    justify-content: center;
+  }
 }
 
 #services .main-services-block .child-services-block {
   width: 400px;
   height: 420px;
-  /* margin: auto; */
 }
 
 #services .header-content {
@@ -595,7 +612,6 @@ nav a.active {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
   min-height: 100%;
-  cursor: pointer;
 }
 
 #services .service-block p {
@@ -1294,9 +1310,9 @@ footer .media a {
   margin-left: 20px;
 }
 
-footer .media a i {
+footer .media a svg {
   font-size: 24px;
-  color: #fff !important;
+  fill: #fff !important;
 }
 
 footer .media a img {
@@ -2622,6 +2638,7 @@ footer ul li .speciel {
   font-weight: 700;
   line-height: 150%;
   margin-bottom: 48px;
+  font-family: Tajawal;
 }
 
 #data-base .data-base-main-block {
@@ -3759,7 +3776,7 @@ footer ul li .speciel {
   }
 
   #testimonial .info {
-    height: 275px
+    height: 285px
   }
 
   #cta .row h3 {
